<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="ExtraText">

    <TextView
        android:id="@+id/addCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/archivo_black"
        android:text="@string/addCard"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.068" />

    <ImageView
        android:id="@+id/cardImg"
        android:layout_width="298dp"
        android:layout_height="138dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/cardImg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardTypeTitle"
        app:srcCompat="@drawable/visa" />

    <TextView
        android:id="@+id/cardTypeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/cardTypeTitle"
        android:textColor="#94AFB6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.089"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addCard" />

    <Button
        android:id="@+id/cardSaveBtn"
        android:layout_width="245dp"
        android:layout_height="55dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/custom_button_blue"
        android:backgroundTint="@null"
        android:text="@string/cardSaveBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />

    <TextView
        android:id="@+id/secureCodeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="24dp"
        android:text="@string/secureCodeTitle"
        android:textColor="@color/smalltitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/expiryDateTitle"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="321dp"
        android:layout_height="60dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.579"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardNumberTitle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/cardNumInput"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/cardNumInput"
            android:inputType="number"
            android:textColor="@color/black"
            android:textColorHint="@color/smalltitle" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/expiryDateTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/expiryDateTitle"
        android:textColor="@color/smalltitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.09"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="125dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="34dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.419"
        app:layout_constraintStart_toEndOf="@+id/textInputLayout2"
        app:layout_constraintTop_toBottomOf="@+id/secureCodeTitle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/secureCodeInput"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/secureCodeInput"
            android:inputType="number|numberPassword"
            android:textColor="@color/black"
            android:textColorHint="@color/smalltitle" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/cardNumberTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="116dp"
        android:text="@string/cardNumberTitle"
        android:textColor="#94AFB6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardImg" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="173dp"
        android:layout_height="60dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="200dp"
        app:hintTextColor="@color/smalltitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.298"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/expiryDateTitle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/expiryDateInput"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/expiryDateInput"
            android:textColorHint="@color/smalltitle" />
    </com.google.android.material.textfield.TextInputLayout>

    <Spinner
        android:id="@+id/cardType"
        android:layout_width="330dp"
        android:layout_height="55dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="34dp"
        android:entries="@array/cardType"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardImg" />




</androidx.constraintlayout.widget.ConstraintLayout>