<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- Four PIN input boxes -->
    <LinearLayout
        android:id="@+id/pinInputLayout"
        android:layout_width="240dp"
        android:layout_height="56dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="224dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Individual PIN boxes -->
        <EditText
            android:id="@+id/pinBox1"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/pin_box_background"
            android:inputType="number"
            android:maxLength="1"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/pinBox2"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/pin_box_background"
            android:inputType="number"
            android:maxLength="1"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/pinBox3"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/pin_box_background"
            android:inputType="number"
            android:maxLength="1"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/pinBox4"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/pin_box_background"
            android:inputType="number"
            android:maxLength="1"
            android:textAlignment="center" />
    </LinearLayout>

    <Button
        android:id="@+id/pinBtn"
        android:layout_width="263dp"
        android:layout_height="49dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="8dp"
        android:text="@string/pinBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pinInputLayout" />

    <TextView
        android:id="@+id/pinTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/archivo_black"
        android:text="@string/pinTitle"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/pinInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.494" />

    <TextView
        android:id="@+id/enterPinTitle"
        android:layout_width="95dp"
        android:layout_height="26dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="67dp"
        android:text="@string/enterPinTitle"
        android:textColor="@color/smalltitle"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pinTitle" />

</androidx.constraintlayout.widget.ConstraintLayout>